--- a/xls2sql/conf.yml
+++ b/xls2sql/conf.yml
@@ -8,7 +8,7 @@ output-dir: result
 float2int: True 
 
 # 有效数据起始行号，程序会从行号等于validrow开始生成SQL
-validrow: 3
+validrow: 2
 
 # 生成的SQL语句模板: 根据Excel每一行数据对SQL模板进行匹配和填充
 # 支持一对多: 一条Excel记录生成多条SQL
@@ -17,6 +17,6 @@ validrow: 3
 #       $n: 美元符号和下标组合，取列的特定下标的值
 #       +n: 加号和数字组合，以n+1的方式进行填充
 sql-templates: 
-    - "INSERT INTO episode(id, title) VALUES(*);"
-    - "UPDATE episode SET id = $0, title = $1 WHERE id = +1;"
+    - "INSERT INTO yuan_pay.settlement_org(userId, income, year, month, status, createAt, updateAt) VALUES($1, $2, 2016, 5, 1, now(), now());"
+    # - "UPDATE episode SET id = $0, title = $1 WHERE id = +1;"
 
